--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -11,9 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large X = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p} \\normalsize \\text{where n is the number of samples and p is the number of features.} $\n",
+    "$\\large X = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features.\n",
     "<br/><br/>\n",
     "$\\large \\mathrm{Cov}(X) = {\\begin{pmatrix} \\mathrm{cov}[\\sum x_{i1}\\hat{e}_{1},\\sum x_{i1}\\hat{e}_{1}] & \\cdots & \\mathrm{cov}[\\sum x_{i1}\\hat{e}_{1},\\sum x_{ip}\\hat{e}_{p}] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[\\sum x_{ip}\\hat{e}_{p},\\sum x_{i1}\\hat{e}_{1}] & \\cdots & \\mathrm{cov}[\\sum x_{ip}\\hat{e}_{p},\\sum x_{ip}\\hat{e}_{p}]\\end{pmatrix}}_{p\\times p}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Relationship between PCA and SVD](https://stats.stackexchange.com/a/134283)"
    ]
   },
   {
@@ -52,6 +59,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from imblearn.over_sampling import SMOTE"
    ]
   },
@@ -64,17 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = make_classification(n_features=4, n_samples=1000, weights=[0.9], random_state= 42, )\n",
+    "data = make_classification(#n_features=4, \n",
+    "                           n_samples=10**3, weights=[0.9], random_state= 42, )\n",
     "#data = make_classification(n_features=2, n_informative=2,n_redundant=0,n_samples=1000, n_clusters_per_class=2, weights=[0.9], random_state= 42, )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components=2, random_state=42)\n",
+    "pca = PCA(n_components=2, random_state=42, svd_solver='auto')\n",
     "\n",
     "scaler = StandardScaler()\n",
     "X_train_sc = scaler.fit_transform(X_train)\n",
@@ -96,122 +113,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cov= np.cov(X_train_sc - X_train_sc.mean(axis=0), rowvar=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigenvalues, eigenvectors = np.linalg.eig(cov)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.06686760e+00, 9.38138656e-01, 9.63907292e-17, 2.74949812e-16])"
+       "(800, 20)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigenvalues"
+    "u.dot(np.diag(s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.0668676 , 0.93813866])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.explained_variance_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.37537327, -0.56343987,  0.47853489, -0.55913753],\n",
-       "       [-0.77887225,  0.17161566,  0.5645045 , -0.21269872]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.components_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.37537327, -0.56343987,  0.47853489, -0.55913753],\n",
-       "       [-0.77887225,  0.17161566,  0.5645045 , -0.21269872]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-(eigenvectors[:, :2].T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.23675929,  0.79205581],\n",
-       "       [ 0.96430644, -1.33873515],\n",
-       "       [-2.64001914,  0.06398657],\n",
+       "array([[ 1.77774354, -0.58563607],\n",
+       "       [ 0.2612659 ,  0.59186165],\n",
+       "       [-0.23103433,  2.09704588],\n",
        "       ...,\n",
-       "       [ 1.64837173, -0.88211564],\n",
-       "       [-2.08038828,  0.35941666],\n",
-       "       [ 0.01904595, -0.24080798]])"
+       "       [ 1.16470754,  2.06088412],\n",
+       "       [ 0.70823629,  0.47223255],\n",
+       "       [ 0.96628558, -1.09295898]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +159,625 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.78141977, -0.94647922],\n",
+       "       [ 0.26013539,  0.96186926],\n",
+       "       [-0.23277473,  2.45263287],\n",
+       "       ...,\n",
+       "       [ 1.16443405,  2.18687769],\n",
+       "       [ 0.70875081,  0.2505776 ],\n",
+       "       [ 0.96521724, -0.84796578]])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train_sc - X_train_sc.mean(axis=0)).dot(pca.components_.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(xpca, X_train_sc.dot(pca.components_.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999999999993"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_sc.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.0668676 , 0.93813866])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.0668676 , 0.93813866])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train_sc - X_train_sc.mean(axis=0)).dot(pca.components_.T).var(axis=0, ddof=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large X = U S V^*\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, s, v = np.linalg.svd(X_train_sc, full_matrices=False, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov= np.cov(X_train_sc - X_train_sc.mean(axis=0), rowvar=False)\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(cov)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(v[0], eigenvectors.T[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.5057229118627715"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigenvectors[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [False, False, False, False],\n",
+       "       [False, False, False, False]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isclose(abs(v), abs(eigenvectors.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(v.T.dot(v), np.eye(v.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True, False],\n",
+       "       [ True,  True, False,  True]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isclose(eigenvectors.T.dot(eigenvectors), np.eye(eigenvectors.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 4)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_sc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp_idx = 0\n",
+    "cosine_similarity(v[comp_idx:comp_idx+1,:], eigenvectors[:,comp_idx].reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.7763568394002505e-15"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((u.T).dot(u) - np.eye(800)).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((u.T).dot(u) , np.eye(u.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((v.T).dot(v) , np.eye(v.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0., -0., -0., ...,  0.,  0.,  0.],\n",
+       "       [-0., -0., -0., ...,  0.,  0.,  0.],\n",
+       "       [-0., -0., -0., ...,  0.,  0.,  0.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  0., ...,  0., -0.,  0.],\n",
+       "       [ 0.,  0.,  0., ..., -0.,  0., -0.],\n",
+       "       [ 0.,  0.,  0., ...,  0., -0., -0.]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round((u.T).dot(u) - np.eye(800), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0., -0.],\n",
+       "       [ 0.,  0.,  1.,  0.],\n",
+       "       [ 0., -0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round((v.T).dot(v), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 1.01230942,  0.06288618, -0.03379583, -0.08403019],\n",
+       "        [ 0.06288618,  1.14011871,  0.01014754, -0.09029393],\n",
+       "        [-0.03379583,  0.01014754,  0.90831919, -0.11137876],\n",
+       "        [-0.08403019, -0.09029393, -0.11137876,  0.93925268]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigenvectors.dot( np.matrix(eigenvectors).H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  1.  , -0.  , -0.  ],\n",
+       "       [ 0.  , -0.  ,  1.  ,  0.22],\n",
+       "       [ 0.  , -0.  ,  0.22,  1.  ]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round((eigenvectors.T).dot(eigenvectors),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.06686760e+00, 9.38138656e-01, 1.54891299e-31, 4.74019816e-32])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.square(s)/(X_train_sc.shape[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.06686760e+00, 9.38138656e-01, 1.54891299e-31, 4.74019816e-32])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.square(s)/(X_train_sc.shape[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov= np.cov(X_train_sc - X_train_sc.mean(axis=0), rowvar=False)\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(cov)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eigenvalues, eigenvectors = np.linalg.eig(cov)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.06686760e+00, 9.38138656e-01, 9.63907292e-17, 2.74949812e-16])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigenvalues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.0668676 , 0.93813866])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7657585, 0.2342415])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.37537327, -0.56343987,  0.47853489, -0.55913753],\n",
+       "       [-0.77887225,  0.17161566,  0.5645045 , -0.21269872]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.components_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.37537327, -0.56343987,  0.47853489, -0.55913753],\n",
+       "       [-0.77887225,  0.17161566,  0.5645045 , -0.21269872]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-(eigenvectors[:, :2].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +792,33 @@
        "       [ 0.01904595, -0.24080798]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xpca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.23675929,  0.79205581],\n",
+       "       [ 0.96430644, -1.33873515],\n",
+       "       [-2.64001914,  0.06398657],\n",
+       "       ...,\n",
+       "       [ 1.64837173, -0.88211564],\n",
+       "       [-2.08038828,  0.35941666],\n",
+       "       [ 0.01904595, -0.24080798]])"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +846,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
