--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large X = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features.\n",
+    "$\\large \\mathbf{X} = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p} = {\\begin{pmatrix} X_1 & \\cdots&X_p \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features.\n",
     "<br/><br/>\n",
-    "$\\large \\mathrm{Cov}(X) = {\\begin{pmatrix} \\mathrm{cov}[\\sum x_{i1}\\hat{e}_{1},\\sum x_{i1}\\hat{e}_{1}] & \\cdots & \\mathrm{cov}[\\sum x_{i1}\\hat{e}_{1},\\sum x_{ip}\\hat{e}_{p}] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[\\sum x_{ip}\\hat{e}_{p},\\sum x_{i1}\\hat{e}_{1}] & \\cdots & \\mathrm{cov}[\\sum x_{ip}\\hat{e}_{p},\\sum x_{ip}\\hat{e}_{p}]\\end{pmatrix}}_{p\\times p}$"
+    "$\\large \\mathrm{Cov}(X) = {\\begin{pmatrix} \\mathrm{cov}[X_1, X_1] & \\cdots & \\mathrm{cov}[X_1, X_p] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[X_p, X_1] & \\cdots & \\mathrm{cov}[X_p, X_p]\\end{pmatrix}}_{p\\times p} = {\\begin{pmatrix} \\mathrm{var}[X_1] & \\cdots & \\mathrm{cov}[X_1, X_p] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[X_p, X_1] & \\cdots & \\mathrm{var}[X_p]\\end{pmatrix}}_{p\\times p}$"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,34 +41,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import f1_score, precision_score, recall_score, roc_auc_score, roc_curve\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB, BernoulliNB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
@@ -185,13 +162,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -281,13 +251,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
    "outputs": [],
@@ -304,13 +267,6 @@
     "cov= np.cov(X_train_sc - X_train_sc.mean(axis=0), rowvar=False)\n",
     "eigenvalues, eigenvectors = np.linalg.eig(cov)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
