PCA and SVD files updated

--- a/Paper implementation_SVD.ipynb
+++ b/Paper implementation_SVD.ipynb
@@ -4,28 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVD"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Relationship between PCA and SVD](https://stats.stackexchange.com/a/134283)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\large \\mathbf{X} = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p} = {\\begin{pmatrix} X_1 & \\cdots&X_p \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features.\n",
-    "<br/><br/>\n",
-    "$\\large \\mathrm{Cov}(X) = {\\begin{pmatrix} \\mathrm{cov}[X_1, X_1] & \\cdots & \\mathrm{cov}[X_1, X_p] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[X_p, X_1] & \\cdots & \\mathrm{cov}[X_p, X_p]\\end{pmatrix}}_{p\\times p} = {\\begin{pmatrix} \\mathrm{var}[X_1] & \\cdots & \\mathrm{cov}[X_1, X_p] \\\\ \\vdots & \\ddots &\\vdots \\\\ \\mathrm{cov}[X_p, X_1] & \\cdots & \\mathrm{var}[X_p]\\end{pmatrix}}_{p\\times p}$"
+    "# Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +30,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
@@ -54,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\Large \\bullet \\textbf{ Gram-Schmidt process}$\n",
+    "## Gram_schmidt process\n",
     "\n",
     "$\\large \\displaystyle \\mathrm{V} = \\begin{pmatrix} \\mathbf{v}_1 &\\mathbf{v}_2 & \\cdots & \\mathbf{v}_p \\end{pmatrix}$\n",
     ", where  $\\mathbf{v}_i$ for $i \\in \\{1,2,\\dots,p\\}$ are column vectors.\n",
@@ -69,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +138,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Full SVD**\n",
+    "\n",
+    "$\\large X_{n\\times p} = U\\; \\Sigma\\; V^* $\n",
+    "\n",
+    "$U_{n\\times n} =$ orthonormal eigenvectors of $XX^* $\n",
+    "\n",
+    "$\\Sigma_{n\\times p} =$ a diagonal matrix whose diagonal entries are the square roots of the non-negative eigenvalues of both $X X^*$ and $X^* X $\n",
+    "\n",
+    "${V^*}_{p\\times p} =$ orthonormal eigenvectors of $X^*X$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Reduced(thin) SVD**\n",
+    "\n",
+    "$\\large X_{n\\times p} = U\\; S \\; V^* \\\\\n",
+    "\\large \\displaystyle U_{n\\times p} ={ \\begin{pmatrix} \\frac{X V_1}{s_1} &\\frac{X V_2}{s_2} &\\cdots & \\frac{X V_p}{s_p} \\end{pmatrix} } = X V S^{-1}$\n",
+    "\n",
+    "$S_{p\\times p} =$ a rectangular diagonal matrix whose diagonal entries are the square roots of the non-negative eigenvalues of $X^* X $\n",
+    "\n",
+    "${V^*}_{p\\times p} =$ orthonormal eigenvectors of $X^*X$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thin SVD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,12 +211,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Codes"
+    "# Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Sample data\n",
+    "\n",
+    "$\\large \\mathbf{X} = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p} = {\\begin{pmatrix} X_1 & \\cdots&X_p \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +235,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_x = data[0]\n",
     "data_y = data[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rank of the sample matrix equals to the number of columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(data_x) == data_x.shape[1]"
    ]
   },
   {
@@ -227,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,25 +294,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large X_{n\\times p} = U\\; \\Sigma\\; V $\n",
-    "\n",
-    "$U_{n\\times n} =$ orthonormal eigenvectors of $XX^* $\n",
-    "\n",
-    "$\\Sigma_{n\\times p} =$  the square roots of the non-negative eigenvalues of both $X X^*$ and $X^* X $\n",
-    "\n",
-    "${V^*}_{p\\times p} =$ orthonormal eigenvectors of $X^*X$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## numpy"
+    "## with numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +326,7 @@
        "True"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +346,7 @@
        "True"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +376,7 @@
        "True"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,12 +396,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mine: reduced(thin) SVD"
+    "## my codes: reduced(thin) SVD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,8 +409,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix V whose columns consist of the right-singular vectors calculated by my codes is a unitary matrix.\n",
+    "\n",
+    "i.e. $V V^* = I$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -377,18 +428,18 @@
        "True"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(vh.dot(vh.conjugate().T), np.eye(vh.shape[0]))"
+    "np.allclose((vv.conjugate().T).dot(vv), np.eye(vv.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -397,13 +448,20 @@
        "True"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.allclose(np.dot(uu, np.dot(ss, vv.T)), data_x_std )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\therefore X \\simeq U S V$"
    ]
   },
   {
