--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -218,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "runtime: 0.7850015163421631\n"
+      "runtime: 0.8237862586975098\n"
      ]
     }
    ],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "array([1.07743561, 1.00654863])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,20 +269,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "pca = PCA()\n",
+    "X_pca = pca.fit_transform(X)\n",
+    "pca.explained_variance_ == X_pca.var(ddof=1, axis=0)\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pca.explained_variance_[0] == xpca[:, 0].var(ddof=1)?: True\n"
+      "pca.explained_variance_ == xpca.var(ddof=1, axis=0)?: True\n"
      ]
     }
    ],
    "source": [
-    "print('pca.explained_variance_[0] == xpca[:, 0].var(ddof=1)?:', np.allclose(pca.explained_variance_[0], xpca[:, 0].var(ddof=1)))"
+    "print('pca.explained_variance_ == xpca.var(ddof=1, axis=0)?:', np.allclose(pca.explained_variance_, xpca.var(ddof=1, axis=0)))"
    ]
   },
   {
@@ -426,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### with EVD of covariance matrix"
+    "### EVD of covariance matrix"
    ]
   },
   {
@@ -438,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -463,13 +474,42 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.allclose(cov, (data_x_std.T).dot(data_x_std)/(data_x_std.shape[0]-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\mathrm{cov}[X_i, X_j] = \\mathrm{cov}[X_j, X_i] \\ \\ \\normalsize \\forall i, j \\in \\{1,2,\\dots,p\\}$ and all covariance values are real.\n",
+    "\n",
+    "Therefore $\\large \\mathrm{Cov}(X)$ is symmetric i.e. $\\large \\mathrm{Cov}(X) = \\left [ \\mathrm{Cov}(X) \\right ]^T$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(cov == np.conjugate(cov).T)"
    ]
   },
   {
@@ -483,12 +523,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "evalues, evectors = np.linalg.eig(cov)\n",
     "evalues_mat = np.sort(evalues)[::-1] * np.eye(evalues.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((np.conjugate(evectors).T).dot(evectors), np.eye(evectors.shape[1]))"
    ]
   },
   {
@@ -685,7 +745,7 @@
    "source": [
     "$\\large \\mathrm{Cov}(X) =\\frac{1}{n-1} X^* X =\\frac{1}{n-1}  V S^* U^* U S V^* =\\frac{1}{n-1} V S^* I S V^* =\\frac{1}{n-1}  V S^2 V^* = V \\Lambda V^* $\n",
     "\n",
-    "$\\therefore$ With using SVD, we can get component vectors for PCA faster than with using Eigenvalue decomposition(EVD) of covariance matrix. "
+    "$\\therefore$ By SVD, we can get component vectors for PCA faster than by Eigenvalue decomposition(EVD) of covariance matrix. "
    ]
   },
   {
@@ -750,15 +810,6 @@
    ],
    "source": [
     "xpca"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_cov = "
    ]
   },
   {
