--- a/Gram-Schmidt_process.ipynb
+++ b/Gram-Schmidt_process.ipynb
@@ -17,15 +17,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import scipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import scipy\n",
+    "\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import make_classification\n",
